--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -6,6 +6,8 @@ import IconLink from "@/components/IconLink.astro";
 import CustomLink from "@/components/CustomLink.astro";
 ---
 
+<Introduction />
+
 <ul class="grid gap-y-6 pb-12 pt-4 text-center">
   {
     SITE.customLinks.map((link) => {
