--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -27,7 +27,7 @@ import profilePicture from "@/assets/profile-picture.jpg";
     href="https://famaf.aulavirtual.unc.edu.ar/"
     class="pt-8 text-lg font-medium uppercase text-lightModeForegroundMuted underline underline-offset-4 hover:text-lightModeForeground dark:text-darkModeForegroundMuted dark:hover:text-darkModeForeground"
   >
-    {`Ir al Aula Virtual (General)`}
+    {`Ir al Aula Virtual`}
   </a>
 </div>
 
