--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -24,10 +24,10 @@ import profilePicture from "@/assets/profile-picture.jpg";
   </p>
 <div class="text-center pt-8">
   <a
-    href="https://famaf.aulavirtual.unc.edu.ar/"
+    href="https://autogestion.guarani.unc.edu.ar/"
     class="pt-8 text-lg font-medium uppercase text-lightModeForegroundMuted underline underline-offset-4 hover:text-lightModeForeground dark:text-darkModeForegroundMuted dark:hover:text-darkModeForeground"
   >
-    {`Ir al Aula Virtual`}
+    {`Ir a Guaraní`}
   </a>
 </div>
 
